[package]
name = "apl3d-rs"
version = "0.1.0"
authors = ["raoul"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = {version = "0.23.0", features = ["conrod"]}
nalgebra = {version = "0.20.0", features = ["serde-serialize"]}
conrod = {version = "0.61.1", optional = true}
rand = "0.7.3"
serde = {version = "1.0.106", features = ["derive"]}
lazy_static = "1.4.0"

[features]
default = ["conrod"]